# Predicao_inadimplencia

./: .gitignore  README  pyproject.toml
notebooks/: EDA.ipynb  import_dados_kaggle.ipynb
src/: config.py  features.py
src/visualization/: eda.py
