[build-system]
requires = ["setuptools>=68.0"]


[project]
name = "risco_de_credito"
version = "0.1.0"
description = "Modelo de risco de crédito — projeto de portfólio"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]